--- a/icland_ice_monitoring.ipynb
+++ b/icland_ice_monitoring.ipynb
@@ -11,21 +11,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'geopandas'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mgeopandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mgpd\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnp\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mmatplotlib\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mpyplot\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mplt\u001b[39;00m\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'geopandas'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import geopandas as gpd\n",
     "import numpy as np\n",
@@ -159,42 +147,27 @@
     "    \"\"\"\n",
     "    bbox = list(seeds_gdf.total_bounds)\n",
     "    \n",
-    "    # Search for data\n",
-    "    # Placeholder: Query for IDs (Using search_data if it supports returning items, or assume a list for demo)\n",
-    "    # Ideally: search_results = store.search_data(bbox=bbox, time_range=time_range, data_id=\"sentinel-2-l2a\")\n",
-    "    \n",
-    "    # Hint: If store.search_data doesn't support item listing, use pystac_client:\n",
-    "    # from pystac_client import Client\n",
-    "    # client = Client.open(\"https://earth-search.aws.element84.com/v1\") # Example URL\n",
-    "    # search = client.search(collections=[\"sentinel-2-l2a\"], bbox=bbox, datetime=f\"{time_range[0]}/{time_range[1]}\")\n",
-    "    # scene_ids = [item.id for item in search.items()]\n",
-    "\n",
-    "    # For the purpose of this algorithm implementation, we will try to find scenes.\n",
-    "    # Since we don't have the exact API for searching items via 'store' in this text,\n",
-    "    # we will assume we can get a list of available product IDs for the region.\n",
-    "    \n",
     "    print(f\"Searching for scenes in {time_range} over {bbox}...\")\n",
-    "    try:\n",
-    "        # This is a hypothetical call. In real xcube-eopf usage, we might use the Opensearch or STAC client directly.\n",
-    "        # Here we try to open the collection and see if we can iterate indices or use a known list.\n",
-    "        # Let's assume we find a way to list IDs.\n",
-    "        \n",
-    "        # DEMO: Let's try to just open the collection with the bbox and time, \n",
-    "        # but that gives us a mosaic/cube. \n",
-    "        # To respect the \"Native\" requirement, we need individual scenes.\n",
-    "        pass \n",
-    "    except Exception:\n",
-    "        pass\n",
-    "        \n",
-    "    # MOCK: List of scene IDs to demonstrate the loop\n",
-    "    # In a real run, replace this with actual search results from the EOPF STAC API.\n",
-    "    scene_ids = [\n",
-    "        # Example IDs - these would come from a search\n",
-    "        # \"S2B_MSIL2A_20250619T101559_N0500_R065_T32TPS_20250619T131415\" \n",
-    "    ]\n",
     "    \n",
-    "    # If list is empty, we can't proceed. \n",
-    "    # However, to make this runnable if the user fills in IDs:\n",
+    "    scene_ids = []\n",
+    "    try:\n",
+    "        print(\"  Querying store for scenes...\")\n",
+    "        # search_data returns an iterator of DataDescriptors\n",
+    "        # We use the collection data_id \"sentinel-2-l2a\"\n",
+    "        search_result = store.search_data(data_id=\"sentinel-2-l2a\", bbox=bbox, time_range=time_range)\n",
+    "        \n",
+    "        for descriptor in search_result:\n",
+    "            if hasattr(descriptor, \"data_id\"):\n",
+    "                 scene_ids.append(descriptor.data_id)\n",
+    "        \n",
+    "        print(f\"  Found {len(scene_ids)} scenes via store search.\")\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        print(f\"  Store search failed: {e}\")\n",
+    "    \n",
+    "    if not scene_ids:\n",
+    "        print(\"  WARNING: No scenes found. Please ensure the store supports search or provide manual IDs.\")\n",
+    "    \n",
     "    results = []\n",
     "    for scene_id in scene_ids:\n",
     "        res = process_scene_native(scene_id, store)\n",
@@ -211,18 +184,6 @@
     "# time_range = [\"2025-06-01\", \"2025-06-30\"]\n",
     "# results = sentinel_native_algorithm(seeds_gdf, time_range, store)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a333be74",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -256,7 +217,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.0"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
