Enhance print statements in ice monitoring notebook for better output clarity by adding flush=True to ensure immediate display of messages during processing.

--- a/icland_ice_monitoring.ipynb
+++ b/icland_ice_monitoring.ipynb
@@ -76,7 +76,7 @@
     "    Process a single Sentinel-2 scene using the Native approach.\n",
     "    Loads the full scene, computes NDSI, and classifies snow.\n",
     "    \"\"\"\n",
-    "    print(f\"Processing scene: {scene_id}\")\n",
+    "    print(f\"Processing scene: {scene_id}\", flush=True)\n",
     "    \n",
     "    # Open the dataset using the scene ID directly\n",
     "    # We do not provide a bbox to open_data to ensure we get the full scene extent available in the store\n",
@@ -89,7 +89,7 @@
     "        # In some EOPF stores, the data_id is the product ID.\n",
     "        ds = store.open_data(data_id=scene_id)\n",
     "    except Exception as e:\n",
-    "        print(f\"Could not open {scene_id} directly: {e}\")\n",
+    "        print(f\"Could not open {scene_id} directly: {e}\", flush=True)\n",
     "        return None\n",
     "\n",
     "    # Mask valid data using SCL (Scene Classification Layer)\n",
@@ -99,7 +99,7 @@
     "        valid_mask = ~ds[\"scl\"].isin([3, 8, 9])\n",
     "        ds_valid = ds.where(valid_mask)\n",
     "    else:\n",
-    "        print(\"SCL layer not found, skipping cloud masking.\")\n",
+    "        print(\"SCL layer not found, skipping cloud masking.\", flush=True)\n",
     "        ds_valid = ds\n",
     "\n",
     "    # NDSI Computation\n",
@@ -127,7 +127,7 @@
     "        else:\n",
     "            snow_pct = 0\n",
     "            \n",
-    "        print(f\"  Snow Cover: {snow_pct:.2f}%\")\n",
+    "        print(f\"  Snow Cover: {snow_pct:.2f}%\", flush=True)\n",
     "        return {\n",
     "            \"scene_id\": scene_id,\n",
     "            \"snow_pct\": snow_pct,\n",
@@ -135,7 +135,7 @@
     "            \"snow_map\": snow_map # Keep in memory or save if needed\n",
     "        }\n",
     "    else:\n",
-    "        print(\"  Required bands (B03, B11) not found.\")\n",
+    "        print(\"  Required bands (B03, B11) not found.\", flush=True)\n",
     "        return None\n",
     "\n",
     "def sentinel_native_algorithm(seeds_gdf, time_range, store):\n",
@@ -147,26 +147,28 @@
     "    \"\"\"\n",
     "    bbox = list(seeds_gdf.total_bounds)\n",
     "    \n",
-    "    print(f\"Searching for scenes in {time_range} over {bbox}...\")\n",
+    "    print(f\"Searching for scenes in {time_range} over {bbox}...\", flush=True)\n",
     "    \n",
     "    scene_ids = []\n",
     "    try:\n",
-    "        print(\"  Querying store for scenes...\")\n",
+    "        print(\"  Querying store for scenes...\", flush=True)\n",
     "        # search_data returns an iterator of DataDescriptors\n",
     "        # We use the collection data_id \"sentinel-2-l2a\"\n",
     "        search_result = store.search_data(data_id=\"sentinel-2-l2a\", bbox=bbox, time_range=time_range)\n",
     "        \n",
+    "        count = 0\n",
     "        for descriptor in search_result:\n",
     "            if hasattr(descriptor, \"data_id\"):\n",
     "                 scene_ids.append(descriptor.data_id)\n",
+    "                 count += 1\n",
     "        \n",
-    "        print(f\"  Found {len(scene_ids)} scenes via store search.\")\n",
+    "        print(f\"  Found {count} scenes via store search.\", flush=True)\n",
     "        \n",
     "    except Exception as e:\n",
-    "        print(f\"  Store search failed: {e}\")\n",
+    "        print(f\"  Store search failed: {e}\", flush=True)\n",
     "    \n",
     "    if not scene_ids:\n",
-    "        print(\"  WARNING: No scenes found. Please ensure the store supports search or provide manual IDs.\")\n",
+    "        print(\"  WARNING: No scenes found. Please ensure the store supports search or provide manual IDs.\", flush=True)\n",
     "    \n",
     "    results = []\n",
     "    for scene_id in scene_ids:\n",
@@ -176,7 +178,7 @@
     "            \n",
     "            # Check 30% condition\n",
     "            if res['snow_pct'] > 30:\n",
-    "                print(f\"  Snow cover > 30%. Marking for expanded search (logic not implemented).\")\n",
+    "                print(f\"  Snow cover > 30%. Marking for expanded search (logic not implemented).\", flush=True)\n",
     "                \n",
     "    return results\n",
     "\n",
