Add detailed description of the Zarr Optimized Algorithm

--- a/icland_ice_monitoring.ipynb
+++ b/icland_ice_monitoring.ipynb
@@ -21,8 +21,54 @@
    "id": "a19a0f15-793f-4709-a620-a9510e174651",
    "metadata": {},
    "source": [
-    "## Zaar Optimize Algorithm"
+    "## Zarr Optimize Algorithm"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e81ebd19",
+   "metadata": {},
+   "source": [
+    "### Description"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08e92349",
+   "metadata": {},
+   "source": [
+    "The idea of this algorithm is to exploit the chunking of the cloud-native Zarr format in order to load only those parts of the Sentinel-2 scenes that are actually needed.\n",
+    "\n",
+    "1. First, we create a 10 km × 10 km grid (EPSG:5325) that covers the whole of Iceland.  \n",
+    "2. Then we load the seeds (GeoJSON points) and mark every grid cell as a *candidate* that contains at least one seed point.  \n",
+    "3. For each *candidate* 10 km × 10 km cell, we query the Sentinel-2 L2A collection via [STAC](https://stac.core.eopf.eodc.eu/collections/sentinel-2-l2a/items) to find all images in the given month whose footprint intersects the cell.  \n",
+    "4. We then use the chunking of the Zarr format to extract only those chunks whose spatial extent overlaps the *candidate* cell and reproject to EPSG:5325.  \n",
+    "5. From all extracted data within the 10 km × 10 km *candidate* cell, we compute the median per pixel and per band (to reduce measurement noise and cloud contamination).  \n",
+    "6. Based on these per-pixel, per-band medians, we calculate the Normalized Difference Snow Index (NDSI).  \n",
+    "7. Every pixel with NDSI > 0.42 is classified as snow/ice.  \n",
+    "8. If more than 30% of the pixels within a 10 km × 10 km *candidate* cell are classified as snow/ice, all 4-neighbouring 10 km × 10 km cells (that have not yet been processed) are also marked as *candidate* cells.  \n",
+    "9. The algorithm repeats steps 3 to 8 until no additional *candidate* cells remain.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "acbb5ac9",
+   "metadata": {},
+   "source": [
+    "### Implementation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44ec3a7c",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
