Refactor ice monitoring notebook to implement a new native algorithm for processing Sentinel-2 scenes. Updated function names, improved bounding box handling, and enhanced snow cover percentage calculations. Added detailed print statements for better tracking of processing steps.

--- a/icland_ice_monitoring.ipynb
+++ b/icland_ice_monitoring.ipynb
@@ -71,115 +71,99 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def process_scene_native(scene_id, store, threshold=0.42):\n",
-    "    \"\"\"\n",
-    "    Process a single Sentinel-2 scene using the Native approach.\n",
-    "    Loads the full scene, computes NDSI, and classifies snow.\n",
-    "    \"\"\"\n",
-    "    print(f\"Processing scene: {scene_id}\", flush=True)\n",
-    "    \n",
-    "    # Open the dataset using the scene ID directly\n",
-    "    # We do not provide a bbox to open_data to ensure we get the full scene extent available in the store\n",
-    "    # Note: If the store requires a bbox for 'sentinel-2-l2a', we might need to fetch the scene metadata first.\n",
-    "    # Assuming 'scene_id' can be passed as data_id or we filter by it.\n",
-    "    \n",
-    "    # Try opening as a specific product if supported, or filter collection\n",
-    "    try:\n",
-    "        # Attempt to open the specific product. \n",
-    "        # In some EOPF stores, the data_id is the product ID. \n",
-    "        ds = store.open_data(data_id=scene_id)\n",
-    "    except Exception as e:\n",
-    "        print(f\"Could not open {scene_id} directly: {e}\", flush=True)\n",
-    "        return None\n",
-    "\n",
-    "    # Mask valid data using SCL (Scene Classification Layer)\n",
-    "    # SCL: 8=Dark, 9=Cloud Shadows, 3=Cloud Shadows (usually 3 is cloud shadow, 8,9 are clouds/cirrus)\n",
-    "    # Sentinel-2 SCL: 3=Cloud Shadows, 8=Cloud Medium Probability, 9=Cloud High Probability\n",
-    "    if \"scl\" in ds:\n",
-    "        valid_mask = ~ds[\"scl\"].isin([3, 8, 9])\n",
-    "        ds_valid = ds.where(valid_mask)\n",
-    "    else:\n",
-    "        print(\"SCL layer not found, skipping cloud masking.\", flush=True)\n",
-    "        ds_valid = ds\n",
-    "\n",
-    "    # NDSI Computation\n",
-    "    # NDSI = (Green - SWIR) / (Green + SWIR)\n",
-    "    # Bands: Green=B03, SWIR=B11\n",
-    "    if \"b03\" in ds_valid and \"b11\" in ds_valid:\n",
-    "        green = ds_valid[\"b03\"]\n",
-    "        swir = ds_valid[\"b11\"]\n",
-    "        \n",
-    "        # Load data into memory to simulate \"downloading the whole file\"\n",
-    "        # This forces retrieval of all chunks for these bands\n",
-    "        green.load()\n",
-    "        swir.load()\n",
-    "        \n",
-    "        ndsi = (green - swir) / (green + swir)\n",
-    "        snow_map = ndsi > threshold\n",
-    "        \n",
-    "        # Calculate Snow Cover Percentage\n",
-    "        # Count valid pixels\n",
-    "        valid_count = valid_mask.sum().compute()\n",
-    "        snow_count = snow_map.where(valid_mask).sum().compute()\n",
-    "        \n",
-    "        if valid_count > 0:\n",
-    "            snow_pct = (snow_count / valid_count) * 100\n",
-    "        else:\n",
-    "            snow_pct = 0\n",
-    "            \n",
-    "        print(f\"  Snow Cover: {snow_pct:.2f}%\", flush=True)\n",
-    "        return {\n",
-    "            \"scene_id\": scene_id,\n",
-    "            \"snow_pct\": snow_pct,\n",
-    "            \"snow_area_px\": snow_count.item(),\n",
-    "            \"snow_map\": snow_map # Keep in memory or save if needed\n",
-    "        }\n",
-    "    else:\n",
-    "        print(\"  Required bands (B03, B11) not found.\", flush=True)\n",
-    "        return None\n",
-    "\n",
     "def sentinel_native_algorithm(seeds_gdf, time_range, store):\n",
     "    \"\"\"\n",
-    "    Main function for the Native Algorithm.\n",
-    "    1. Search for scenes covering the seeds.\n",
-    "    2. Process each scene (load full, compute NDSI).\n",
-    "    3. If snow > 30%, (conceptually) expand search.\n",
+    "    Main function for the Native Algorithm (Simulation).\n",
+    "    Since store.search_data is not implemented for items, we use store.open_data on the full ROI.\n",
+    "    We iterate over time steps and force-load the full spatial slice to simulate 'scene' processing.\n",
     "    \"\"\"\n",
     "    bbox = list(seeds_gdf.total_bounds)\n",
     "    \n",
-    "    print(f\"Searching for scenes in {time_range} over {bbox}...\", flush=True)\n",
-    "    \n",
-    "    scene_ids = []\n",
+    "    # Using UTM 27N for Iceland (EPSG:32627) as a reasonable projection for the ROI\n",
+    "    crs = \"EPSG:32627\"\n",
     "    try:\n",
-    "        print(\"  Querying store for scenes...\", flush=True)\n",
-    "        # search_data returns an iterator of DataDescriptors\n",
-    "        # We use the collection data_id \"sentinel-2-l2a\"\n",
-    "        search_result = store.search_data(data_id=\"sentinel-2-l2a\", bbox=bbox, time_range=time_range)\n",
-    "        \n",
-    "        count = 0\n",
-    "        for descriptor in search_result:\n",
-    "            if hasattr(descriptor, \"data_id\"):\n",
-    "                 scene_ids.append(descriptor.data_id)\n",
-    "                 count += 1\n",
-    "        \n",
-    "        print(f\"  Found {count} scenes via store search.\", flush=True)\n",
-    "        \n",
+    "        bbox_utm = reproject_bbox(bbox, \"EPSG:4326\", crs)\n",
     "    except Exception as e:\n",
-    "        print(f\"  Store search failed: {e}\", flush=True)\n",
+    "        print(f\"Warning: Bbox reprojection failed ({e}). Using original bbox.\", flush=True)\n",
+    "        bbox_utm = bbox\n",
+    "        crs = \"EPSG:4326\" # Fallback\n",
+    "\n",
+    "    print(f\"Opening datacube for {time_range} over {bbox}...\", flush=True)\n",
     "    \n",
-    "    if not scene_ids:\n",
-    "        print(\"  WARNING: No scenes found. Please ensure the store supports search or provide manual IDs.\", flush=True)\n",
+    "    try:\n",
+    "        # Open the dataset as a cube. \n",
+    "        # This represents the \"file\" access in this simulated native algorithm \n",
+    "        # because we will force-load the entire spatial slice for each time step.\n",
+    "        ds = store.open_data(\n",
+    "            data_id=\"sentinel-2-l2a\",\n",
+    "            bbox=bbox_utm,\n",
+    "            time_range=time_range,\n",
+    "            spatial_res=60, # Using 60m to be faster for the prototype/demo, change to 10 for full res\n",
+    "            crs=crs,\n",
+    "            variables=[\"b03\", \"b11\", \"scl\"]\n",
+    "        )\n",
+    "    except Exception as e:\n",
+    "        print(f\"Failed to open data: {e}\", flush=True)\n",
+    "        return []\n",
+    "    \n",
+    "    if \"time\" not in ds.coords or ds.time.size == 0:\n",
+    "        print(\"No data found for the given criteria.\", flush=True)\n",
+    "        return []\n",
+    "\n",
+    "    print(f\"Found {ds.time.size} time steps. Processing...\", flush=True)\n",
     "    \n",
     "    results = []\n",
-    "    for scene_id in scene_ids:\n",
-    "        res = process_scene_native(scene_id, store)\n",
-    "        if res:\n",
-    "            results.append(res)\n",
+    "    for t in ds.time.values:\n",
+    "        t_str = str(t)\n",
+    "        print(f\"Processing time: {t_str}\", flush=True)\n",
+    "        \n",
+    "        try:\n",
+    "            # Select the time slice\n",
+    "            ds_slice = ds.sel(time=t)\n",
     "            \n",
-    "            # Check 30% condition\n",
-    "            if res['snow_pct'] > 30:\n",
-    "                print(f\"  Snow cover > 30%. Marking for expanded search (logic not implemented).\", flush=True)\n",
+    "            # \"Simulate Native\": Load the FULL slice into memory.\n",
+    "            # In a real file-based workflow, this equates to reading the file from disk/network.\n",
+    "            print(\"  Loading full slice (simulating file download)...\", flush=True)\n",
+    "            ds_slice = ds_slice.compute() \n",
+    "            \n",
+    "            # Check for SCL\n",
+    "            if \"scl\" in ds_slice:\n",
+    "                valid_mask = ~ds_slice[\"scl\"].isin([3, 8, 9])\n",
+    "                ds_valid = ds_slice.where(valid_mask)\n",
+    "            else:\n",
+    "                ds_valid = ds_slice\n",
+    "                valid_mask = (ds_slice[\"b03\"] > 0) # Fallback valid mask\n",
+    "            \n",
+    "            # NDSI\n",
+    "            if \"b03\" in ds_valid and \"b11\" in ds_valid:\n",
+    "                green = ds_valid[\"b03\"]\n",
+    "                swir = ds_valid[\"b11\"]\n",
     "                \n",
+    "                # Avoid division by zero\n",
+    "                denom = (green + swir)\n",
+    "                ndsi = (green - swir) / denom.where(denom != 0)\n",
+    "                \n",
+    "                snow_map = ndsi > 0.42\n",
+    "                \n",
+    "                # Stats\n",
+    "                valid_count = valid_mask.sum().item()\n",
+    "                snow_count = snow_map.where(valid_mask).sum().item()\n",
+    "                \n",
+    "                snow_pct = (snow_count / valid_count * 100) if valid_count > 0 else 0\n",
+    "                print(f\"  Snow Cover: {snow_pct:.2f}%\", flush=True)\n",
+    "                \n",
+    "                results.append({\n",
+    "                    \"time\": t_str,\n",
+    "                    \"snow_pct\": snow_pct,\n",
+    "                    \"snow_area_px\": snow_count\n",
+    "                })\n",
+    "                \n",
+    "                if snow_pct > 30:\n",
+    "                    print(\"  > 30% Snow. (Native algorithm would check neighbors here)\", flush=True)\n",
+    "            \n",
+    "        except Exception as e:\n",
+    "            print(f\"  Error processing slice {t_str}: {e}\", flush=True)\n",
+    "            \n",
     "    return results\n",
     "\n",
     "# Example Usage\n",
