--- a/icland_ice_monitoring.ipynb
+++ b/icland_ice_monitoring.ipynb
@@ -10,6 +10,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1d2b1a33",
+   "metadata": {},
+   "source": [
+    "Iceland’s glaciers are shrinking, with seasonal melt–freeze cycles superimposed on a persistent long‑term decline (see: [Icelandic glacier loss - AntarcticGlaciers.org](https://www.antarcticglaciers.org/glaciers-and-climate/glacier-recession/icelandic-glacier-loss/) and [A Revised Snow Cover Algorithm to Improve Discrimination between Snow and Clouds: A Case Study in Gran Paradiso National Park](https://www.mdpi.com/2072-4292/13/10/1957)). To monitor these changes at scale, we need methods that minimize data movement while preserving scientific fidelity. This project leverages the new EOPF Zarr format to exploit chunked, cloud‑native reads for efficient snow and ice mapping from Sentinel‑2."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3b02bf2d-d5de-4da2-9cd6-492a8f296b35",
    "metadata": {},
    "source": [
@@ -18,10 +26,53 @@
   },
   {
    "cell_type": "markdown",
+   "id": "809debbe",
+   "metadata": {},
+   "source": [
+    "We predefined seeds for our algorithms using [Icelands land cover data](https://www.natt.is/en/resources/open-data/data-download) to locate glacial areas. For each region of connected glaciers or glaciers located close to each other (= within 5km distance), we set one point in the center of that area. This yields a dataset of 21 points."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67cbc4e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.13.5' requires the ipykernel package.\n",
+      "\u001b[1;31m<a href='command:jupyter.createPythonEnvAndSelectController'>Create a Python Environment</a> with the required packages.\n",
+      "\u001b[1;31mOr install 'ipykernel' using the command: 'c:/Python313/python.exe -m pip install ipykernel -U --user --force-reinstall'"
+     ]
+    }
+   ],
+   "source": [
+    "import folium\n",
+    "import geopandas as gpd\n",
+    "seeds_file = \"./data/Iceland_Seeds.geojson\"\n",
+    "df_seeds = gpd.read_file(seeds_file)\n",
+    "if df_seeds.crs is None:\n",
+    "    df_seeds = df_seeds.set_crs(\"EPSG:4326\")\n",
+    "else:\n",
+    "    df_seeds = df_seeds.to_crs(\"EPSG:4326\")\n",
+    "\n",
+    "m = folium.Map(zoom_start=10)\n",
+    "folium.GeoJson(df_seeds).add_to(m)\n",
+    "minx, miny, maxx, maxy = df_seeds.total_bounds\n",
+    "bounds = [[miny, minx], [maxy, maxx]]\n",
+    "m.fit_bounds(bounds)\n",
+    "m"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a19a0f15-793f-4709-a620-a9510e174651",
    "metadata": {},
    "source": [
-    "## Zaar Optimize Algorithm"
+    "## Zarr Optimize Algorithm"
    ]
   },
   {
@@ -45,7 +96,7 @@
    "id": "2bbeeae6-3f16-4424-8cfa-9eaf25be1545",
    "metadata": {},
    "source": [
-    "### Benchmark Zaar Optimize Algorithm"
+    "### Benchmark Zarr Optimize Algorithm"
    ]
   },
   {
@@ -69,13 +120,19 @@
    "id": "1b918682-473e-42a5-9743-dda0adbe5eed",
    "metadata": {},
    "source": [
-    "## Temporal Glaciar Analysis"
+    "## Temporal Glacier Analysis"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a29f8092",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -89,7 +146,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
