Remove docstring from the sentinel_native_algorithm function in the ice monitoring notebook for cleaner code. Uncomment example usage to demonstrate function application.

--- a/icland_ice_monitoring.ipynb
+++ b/icland_ice_monitoring.ipynb
@@ -72,11 +72,7 @@
    "outputs": [],
    "source": [
     "def sentinel_native_algorithm(seeds_gdf, time_range, store):\n",
-    "    \"\"\"\n",
-    "    Main function for the Native Algorithm (Simulation).\n",
-    "    Since store.search_data is not implemented for items, we use store.open_data on the full ROI.\n",
-    "    We iterate over time steps and force-load the full spatial slice to simulate 'scene' processing.\n",
-    "    \"\"\"\n",
+    "\n",
     "    bbox = list(seeds_gdf.total_bounds)\n",
     "    \n",
     "    # Using UTM 27N for Iceland (EPSG:32627) as a reasonable projection for the ROI\n",
@@ -167,8 +163,8 @@
     "    return results\n",
     "\n",
     "# Example Usage\n",
-    "# time_range = [\"2025-06-01\", \"2025-06-30\"]\n",
-    "# results = sentinel_native_algorithm(seeds_gdf, time_range, store)"
+    "time_range = [\"2025-06-01\", \"2025-06-30\"]\n",
+    "results = sentinel_native_algorithm(seeds_gdf, time_range, store)"
    ]
   },
   {
