--- a/icland_ice_monitoring_debug.ipynb
+++ b/icland_ice_monitoring_debug.ipynb
@@ -122,7 +122,7 @@
     "\n",
     "    print(f\"Found {ds.time.size} time steps. Processing...\", flush=True)\n",
     "    \n",
-    "    results = []\n",
+    "\"\"\"     results = []\n",
     "    for t in ds.time.values:\n",
     "        t_str = str(t)\n",
     "        print(f\"Processing time: {t_str}\", flush=True)\n",
@@ -174,7 +174,7 @@
     "        except Exception as e:\n",
     "            print(f\"  Error processing slice {t_str}: {e}\", flush=True)\n",
     "            \n",
-    "    return results\n",
+    "    return results \"\"\"\n",
     "\n",
     "# Example Usage\n",
     "time_range = [\"2025-06-01\", \"2025-06-30\"]\n",
