Added some more markdown text

--- a/icland_ice_monitoring.ipynb
+++ b/icland_ice_monitoring.ipynb
@@ -71,19 +71,7 @@
    "execution_count": null,
    "id": "284ab12f",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pystac_client'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 16\u001b[39m\n\u001b[32m     13\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpd\u001b[39;00m\n\u001b[32m     15\u001b[39m \u001b[38;5;66;03m# STAC API for Sentinel-2 data\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m16\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpystac_client\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Client\n\u001b[32m     18\u001b[39m \u001b[38;5;66;03m# Visualization\u001b[39;00m\n\u001b[32m     19\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mmatplotlib\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mpyplot\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mplt\u001b[39;00m\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'pystac_client'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Standard libraries\n",
     "import warnings\n",
@@ -130,22 +118,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "86ec5c84",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'gpd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Load seeds\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m seeds = \u001b[43mgpd\u001b[49m.read_file(\u001b[33m'\u001b[39m\u001b[33mdata/Iceland_Seeds.geojson\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m# Check CRS and transform to EPSG:5325 if necessary\u001b[39;00m\n\u001b[32m      5\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mOriginal CRS: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mseeds.crs\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mNameError\u001b[39m: name 'gpd' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load seeds\n",
     "seeds = gpd.read_file('data/Iceland_Seeds.geojson')\n",
@@ -303,13 +279,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d6a819c5",
+   "metadata": {},
+   "source": [
+    "Now we mark every cell, which contains a seed, as a candidate"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "ed6ce8ea",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Mark grid cells with seeds as candidates\n",
     "def mark_candidate_cells(grid, seeds):\n",
     "    \"\"\"\n",
     "    Marks grid cells that contain at least one seed.\n",
@@ -353,6 +336,14 @@
     "print(f\"   Total grid cells: {len(grid)}\")\n",
     "print(f\"   Candidate cells: {n_candidates}\")\n",
     "print(f\"   Seeds per candidate (average): {grid[grid['is_candidate']]['seed_count'].mean():.1f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67877460",
+   "metadata": {},
+   "source": [
+    "Then we create an interactive visualization, which displays the Seeds, Grid, candidate cells and a background satellite images:"
    ]
   },
   {
